# Ensemble-AI-for-Container-Booking

./: LICENSE  README.md  pyproject.toml
docs/: agents.md  architecture.md  configuration.md
scenarios/: blocked_party.json  sample_shanghai_la.json
src/logistics_container_agents/: __init__.py  __main__.py  cli.py
src/logistics_container_agents/agents/: __init__.py  base.py  carrier_selection.py  compliance.py  documentation.py  orchestrator.py  rate_quoting.py  route_planning.py  shipper_intake.py  tracking.py
src/logistics_container_agents/domain/: __init__.py  models.py
src/logistics_container_agents/ensemble/: __init__.py  bus.py  runner.py  workflow.py
src/logistics_container_agents/llm/: __init__.py  anthropic_provider.py  base.py  config.py  factory.py  local_provider.py  openai_provider.py
src/logistics_container_agents/tools/: __init__.py  maritime.py
src/logistics_container_agents/tools/data/: rates.json  sanctions.json  schedules.json
tests/: conftest.py  test_config.py  test_ensemble.py  test_tools.py
tests/support/: mock_llm.py
