[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logistics-container-agents"
version = "0.1.0"
description = "Ensemble AI agents for maritime FCL container booking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
lca-book = "logistics_container_agents.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/logistics_container_agents"]

[tool.hatch.build.targets.wheel.force-include]
"src/logistics_container_agents/tools/data" = "logistics_container_agents/tools/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
